--- a/index.html
+++ b/index.html
@@ -451,12 +451,15 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="paragraph">
 <p>これはインクルードされた内容です。</p>
 </div>
+<div class="paragraph">
+<p><a href="./Pleasanter/setup/HowToSetupDockerCompose.adoc">リンク</a></p>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-08-08 23:45:15 UTC
+Last updated 2025-08-09 00:05:53 UTC
 </div>
 </div>
 </body>
