--- a/index.html
+++ b/index.html
@@ -452,14 +452,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>これはインクルードされた内容です。</p>
 </div>
 <div class="paragraph">
-<p><a href="./Pleasanter/setup/HowToSetupDockerCompose.adoc">リンク</a></p>
+<p><a href="Pleasanter/setup/HowToSetupDockerCompose.adoc">リンク</a></p>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2025-08-09 00:05:53 UTC
+Last updated 2025-08-09 06:13:53 UTC
 </div>
 </div>
 </body>
